# agentic_design_patterns

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SCENARIOS.md  repo_support.py  ssl_fix.py
.github/workflows/: pattern-smoke-tests.yml  reliability-gate.yml  typescript-demo-smoke.yml
1_prompt_chain/: README.txt  run.sh
1_prompt_chain/src/: chain_prompt.py
2_routing/: run.sh
2_routing/src/: routing.py
3_parallelization/: README.md  run.sh
3_parallelization/src/: parallelization.py
4_reflection/: pyproject.toml  run.sh
4_reflection/src/: reflection.py  reflection_stateful_loop.py
foundational_design_patterns/10_hitl/: IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  pi.md  pyproject.toml  run.sh
foundational_design_patterns/10_hitl/src/: hitl_advanced.py  hitl_basic.py  hitl_langgraph.py
foundational_design_patterns/10_hitl/typescript/: README.md  package.json  run.sh
foundational_design_patterns/11_structured_outputs/: README.md  pi.md  pyproject.toml  run.sh
foundational_design_patterns/11_structured_outputs/src/: structured_outputs_advanced.py  structured_outputs_basic.py
foundational_design_patterns/11_structured_outputs/typescript/: README.md  package.json  run.sh
foundational_design_patterns/11_structured_outputs/typescript/src/: structured_outputs_advanced.ts  structured_outputs_basic.ts
foundational_design_patterns/11_structured_outputs/typescript/tests/: structured_outputs.test.ts
foundational_design_patterns/12_computer_use/: README.md  pi.md  pyproject.toml  run.sh
foundational_design_patterns/12_computer_use/src/: computer_use_advanced.py  computer_use_basic.py
foundational_design_patterns/12_computer_use/typescript/: README.md  package.json  run.sh
foundational_design_patterns/1_prompt_chain/: QUICK_START.md  README.md  pi.md  run.sh
foundational_design_patterns/1_prompt_chain/src/: chain_prompt.py
foundational_design_patterns/1_prompt_chain/typescript/: README.md  package.json  run.sh
foundational_design_patterns/2_routing/: QUICK_START.md  README.md  pi.md  pyproject.toml
foundational_design_patterns/2_routing/src/: routing.py
foundational_design_patterns/2_routing/typescript/: README.md  package.json  run.sh
foundational_design_patterns/3_parallelization/: QUICK_START.md  README.md  pi.md
foundational_design_patterns/3_parallelization/src/: parallelization.py
foundational_design_patterns/3_parallelization/typescript/: README.md  package.json  run.sh
foundational_design_patterns/4_reflection/: QUICK_START.md  README.md  pi.md
foundational_design_patterns/4_reflection/src/: reflection.py  reflection_stateful_loop.py
foundational_design_patterns/4_reflection/typescript/: README.md  package.json  run.sh
foundational_design_patterns/5_tool_use/: QUICK_START.md  README.md  pi.md  pyproject.toml  run.sh
foundational_design_patterns/5_tool_use/src/: tool_use.py  (+1 more)
foundational_design_patterns/6_planning/: QUICK_START.md  README.md  README_new.md  pi.md  pyproject.toml  run.sh
foundational_design_patterns/7_multi_agent_collaboration/: QUICK_START.md  README.md  pi.md  pyproject.toml  run.sh
foundational_design_patterns/8_react/: FILE_STRUCTURE.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  pi.md  pyproject.toml  run.sh
foundational_design_patterns/9_rag/: QUICK_START.md  README.md  download_model.py  pyproject.toml  run.sh
learning/adaptive_learning/: QUICK_START.md  README.md  pi.md  pyproject.toml  run.sh
memory/context_management/: QUICK_START.md  README.md  pi.md  pi_codex.md  pi_pi.md  pyproject.toml  run.sh
memory/memory_management/: .gitignore  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  pi.md  pi_codex.md  pi_pi.md  pyproject.toml  requirements.txt  run.sh
memory/memory_management/src/: __init__.py  memory_advanced.py  memory_basic.py
observability/evaluation_monitoring/: QUICK_START.md  README.md  pi.md  pyproject.toml  run.sh
observability/resource_optimization/: QUICK_START.md  README.md  pi.md  pyproject.toml  run.sh
orchestration/agent_communication/: QUICK_START.md  README.md  pi.md  pyproject.toml  run.sh
orchestration/goal_management/: QUICK_START.md  README.md  pi.md  pyproject.toml  run.sh
orchestration/goal_management/src/: __init__.py  goal_advanced.py  goal_basic.py
orchestration/mcp/: .implementation_summary.txt  QUICK_START.md  README.md  pi.md  pyproject.toml  run.sh
orchestration/prioritization/: QUICK_START.md  README.md  pi.md  pyproject.toml  run.sh
orchestration/skills/: README.md  pi.md  pi_codex.md  pi_pi.md  pyproject.toml  run.sh
orchestration/subagents/: README.md  pi.md  pi_codex.md  pi_pi.md  pyproject.toml  run.sh
reasoning/deep_research/: QUICK_START.md  README.md  pi.md  pyproject.toml  run.sh
reasoning/deep_research/src/: deep_research_advanced.py  deep_research_basic.py
reasoning/exploration_discovery/: QUICK_START.md  README.md  pi.md  pyproject.toml  run.sh
reasoning/exploration_discovery/src/: __init__.py  exploration_advanced.py  exploration_basic.py
reasoning/graph_of_thoughts/: QUICK_START.md  README.md  pi.md  pyproject.toml  run.sh
reasoning/graph_of_thoughts/src/: __init__.py  got_advanced.py  got_basic.py
reasoning/tree_of_thoughts/: QUICK_START.md  README.md  pi.md  pyproject.toml  run.sh
reliability/error_recovery/: QUICK_START.md  README.md  pi.md  pyproject.toml  run.sh
reliability/guardrails/: QUICK_START.md  README.md  pi.md  pyproject.toml  run.sh
scripts/: run_demos_smoke.sh  run_demos_smoke_typescript.sh
tests/: test_reliability_gate.py
tooling/eval_template/: README.md  WHAT_GOOD_LOOKS_LIKE.md.template  sample_trace.md.template
typescript_base/: TYPESCRIPT.md  package.json  tsconfig.base.json
(+120 files in other folders)
