[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic_design_patterns"
version = "0.1.0"
description = "Structured Outputs Pattern Implementation"
requires-python = ">=3.11"
authors = [
    { name = "Gino Tesei", email = "gteseil@yahoo.com" }
]
dependencies = [
    "langchain>=1.2.3",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.5",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "instructor>=1.0.0",
]

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 120
fix = true
